--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,12 @@
 <% provide(:title, "Home") %>
-<h1>Home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="center jumbotron">
+<h1>Welcome to Your Course App</h1>
+
+<h2>
+  This is the home page for RAD Assignment 2.
+</h2>
+
+<%= link_to "#", class: "btn btn-lg btn-danger" do %>
+    <i class="fa fa-user-plus" aria-hidden="true"></i> Sign up now
+<% end %>
+</div>
