--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -33,6 +33,12 @@ textarea {
   margin-top: 15px;
 }
 
+/* homepage */
+#home-options {
+  h1 {
+    text-align: left;
+  }
+}
 
 /* typography */
 
