--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,23 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "YOURCOURSE", root_path, id: "logo", class: "btn btn-lg btn-info" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: "delete" %>
-              </li>
-            </ul>
+        <li>
+          <%= link_to "#", class: "btn btn-info" do %>
+            <i class="fa fa-list-ol" aria-hidden="true"></i> Category
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "#", class: "btn btn-info" do %>
+            <i class="fa fa-location-arrow" aria-hidden="true"></i> Location
+          <% end %>
           </li>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
+        <li>
+          <%= link_to "#", class: "btn btn-info" do %>
+            <i class="fa fa-sign-in" aria-hidden="true"></i> Log in
+          <% end %>
+          </li>
       </ul>
     </nav>
   </div>
