--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
   <h2>
     This is the home page for RAD Assignment 2.
   </h2>
-  <%= link_to "#", class: "btn btn-lg btn-danger" do %>
+  <%= link_to signup_path, class: "btn btn-lg btn-danger" do %>
       <i class="fa fa-user-plus" aria-hidden="true"></i> Sign up now
   <% end %>
 </div>
