--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,20 +4,48 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <%= link_to "#", class: "btn btn-info" do %>
-            <i class="fa fa-list-ol" aria-hidden="true"></i> Category
-          <% end %>
+          <a href="#" class="dropdown-toggle btn btn-info" data-toggle="dropdown">
+            <i class="fa fa-list-ol" aria-hidden="true"></i> Category <b class = "caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <% if Category.any? %>
+              <% Category.all.each do |c| %>
+                <li><%= link_to c.name, c %></li>
+              <% end %>
+            <% end %>
+            <% if logged_in? %>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Create Category", new_category_path %>
+              </li>
+            <% end %>
+          </ul>
         </li>
         <li>
-          <%= link_to "#", class: "btn btn-info" do %>
-            <i class="fa fa-location-arrow" aria-hidden="true"></i> Location
-          <% end %>
+          <a href="#" class="dropdown-toggle btn btn-info" data-toggle="dropdown">
+            <i class="fa fa-location-arrow" aria-hidden="true"></i> Location <b class = "caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <% if Location.any? %>
+              <% Location.all.each do |l| %>
+                <li><%= link_to l.location, l %></li>
+              <% end %>
+            <% end %>
+            <% if logged_in? %>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Create Location", new_location_path %>
+              </li>
+            <% end %>
+          </ul>
+        </li>
+        <% if !logged_in? %>
+          <li>
+            <%= link_to login_path, class: "btn btn-info" do %>
+              <i class="fa fa-sign-in" aria-hidden="true"></i> Log in
+            <% end %>
           </li>
-        <li>
-          <%= link_to login_path, class: "btn btn-info" do %>
-            <i class="fa fa-sign-in" aria-hidden="true"></i> Log in
-          <% end %>
-          </li>
+        <% end %>
       </ul>
     </nav>
   </div>
