--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,24 +5,27 @@
   <h2>
     This is the home page for RAD Assignment 2.
   </h2>
-  <%= link_to signup_path, class: "btn btn-lg btn-danger" do %>
-      <i class="fa fa-user-plus" aria-hidden="true"></i> Sign up now
+  <% if !logged_in? %>
+    <%= link_to signup_path, class: "btn btn-lg btn-danger" do %>
+        <i class="fa fa-user-plus" aria-hidden="true"></i> Sign up now
+    <% end %>
   <% end %>
 </div>
-
-<div class="row" id="home-options">
-  <div class="col-md-6">
-    <h1>View Course as a Guest User</h1>
-    <p>Browse and view courses as a guest</p>
-    <%= link_to "#", class: "btn btn-success" do %>
-      <i class="fa fa-book" aria-hidden="true"></i> Browse all courses
-    <% end %>
+<% if !logged_in? %>
+  <div class="row" id="home-options">
+    <div class="col-md-6">
+      <h1>View Course as a Guest User</h1>
+      <p>Browse and view courses as a guest</p>
+      <%= link_to "#", class: "btn btn-success" do %>
+        <i class="fa fa-book" aria-hidden="true"></i> Browse all courses
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <h1>Sign in to your account</h1>
+      <p>Update your courses, view your courses, view coordinator information</p>
+      <%= link_to "#", class: "btn btn-success" do %>
+        <i class="fa fa-sign-in" aria-hidden="true"></i> Log in to your account
+      <% end %>
+    </div>
   </div>
-  <div class="col-md-6">
-    <h1>Sign in to your account</h1>
-    <p>Update your courses, view your courses, view coordinator information</p>
-    <%= link_to "#", class: "btn btn-success" do %>
-      <i class="fa fa-sign-in" aria-hidden="true"></i> Log in to your account
-    <% end %>
-  </div>
-</div>
+<% end %>
