--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Category#show</h1>
-<p>Find me in app/views/category/show.html.erb</p>
+<% provide(:title, @category.name) %>
+<h1>Courses in <%= @category.name %></h1>
+<hr />
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h2>To do: list courses here.</h2>
+  </div>
+</div>
