--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,6 +39,26 @@
             <% end %>
           </ul>
         </li>
+        <% if logged_in? %>
+          <li>
+            <a href="#" class="btn btn-info">
+              <i class="fa fa-file-text-o" aria-hidden="true"></i> New Course
+            </a>
+          </li>
+          <li>
+            <a href="#" class="dropdown-toggle btn btn-danger" data-toggle="dropdown">
+              <%= current_user.name %> <b class = "caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "View Profile", current_user %></li>
+              <li><%= link_to "Edit Profile", "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
         <% if !logged_in? %>
           <li>
             <%= link_to login_path, class: "btn btn-info" do %>
