--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,7 +23,7 @@
     <div class="col-md-6">
       <h1>Sign in to your account</h1>
       <p>Update your courses, view your courses, view coordinator information</p>
-      <%= link_to "#", class: "btn btn-success" do %>
+      <%= link_to login_path, class: "btn btn-success" do %>
         <i class="fa fa-sign-in" aria-hidden="true"></i> Log in to your account
       <% end %>
     </div>
