Add form for creating a course, including associations with location and category

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -184,6 +184,12 @@ input {
   margin-left: 0;
 }
 
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
 
 /* footer */
 
@@ -212,6 +218,11 @@ footer {
   }
 }
 
+.checkboxes {
+  label {
+    font-weight: normal;
+  }
+}
 
 /* miscellaneous */
 
