--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 /* mixins, variables, etc. */
 
@@ -10,11 +11,18 @@
 }
 
 $gray-medium-light: #eaeaea;
+$gray-medium-dark: #d9d9d9;
 
 /* universal */
 
 body {
   padding-top: 60px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.5em;
+}
+
+.container {
+  margin-top: 10px;
 }
 
 section {
@@ -31,6 +39,14 @@ textarea {
     margin-bottom: 10px;
   }
   margin-top: 15px;
+}
+
+.grey-box {
+  background-color: $gray-medium-light;
+  border: 1px solid $gray-medium-dark;
+  border-radius: 5px;
+  padding: 3%;
+  margin-bottom: 10px;
 }
 
 /* homepage */
@@ -244,5 +260,28 @@ footer {
     overflow: auto;
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+/* Show course */
+
+.course-user {
+  text-align: center;
+  img {
+    width: 80%;
+    margin: 5% 10%;
+  }
+  p {
+    display: inline-block;
+    font-weight: bold;
+    color: black;
+  }
+}
+
+.course {
+  h2 {
+    text-align: left;
+    color: black;
+    font-size: 1.5em;
   }
 }
