--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,37 +1,14 @@
 <% provide(:title, 'Create a new course') %>
+<% provide(:button_text, 'Create a new course') %>
 <h1>Create a new course</h1>
+<hr />
+<%= render 'form' %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for @course do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-      <%= f.label :prerequisite %>
-      <%= f.text_field :prerequisite, class: 'form-control' %>
-
-      <%= f.label :description %>
-      <%= f.text_area :description, class: 'form-control' %>
-      
-      <%= f.label :category_ids, "Category" %>
-      <div class="checkboxes">
-        <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, {}, { multiple: true } %>
-      </div>
-      
-      <br />
-      
-      <%= f.label :location_ids, "Location" %>
-      <div class="checkboxes">
-        <%= f.collection_check_boxes :location_ids, Location.all, :id, :location, {}, { multiple: true } %>
-      </div>
-      
-      <span class="picture">
-        <%= f.file_field :picture %>
-      </span>
-
-      <%= f.submit "Create a new course", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
+<script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
