Add link to courses index

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,4 +23,4 @@
     <%= render @user %>
   </div>
 </div>
-<%= link_to "Return to Course List", "#", class: "btn btn-info" %>
+<%= link_to "Return to Course List", courses_path, class: "btn btn-info" %>
