--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,7 +16,7 @@
   <div class="col-md-6">
     <h1>View Course as a Guest User</h1>
     <p>Browse and view courses as a guest</p>
-    <%= link_to "#", class: "btn btn-success" do %>
+    <%= link_to courses_path, class: "btn btn-success" do %>
       <i class="fa fa-book" aria-hidden="true"></i> Browse all courses
     <% end %>
   </div>
