--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <%= image_tag course.picture.url if course.picture? %>
+      <%= image_tag course.picture.thumb.url if course.picture? %>
     </div>
   </div>
   <hr />
