--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,6 +2,33 @@
 <h1>All Courses</h1>
 <hr />
 
-<ul class="courses">
-  <%= render @courses %>
-</ul>
+<div>
+
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#courses" aria-controls="courses" role="tab" data-toggle="tab">Courses</a></li>
+    <li role="presentation"><a href="#coordinators" aria-controls="coordinators" role="tab" data-toggle="tab">Coordinators</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane fade in active" id="courses">
+      <ul class="courses">
+        <%= render @courses %>
+      </ul>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="coordinators">
+      <ul class="users-list">
+        <%= render @users %>
+      </ul>
+    </div>
+  </div>
+
+</div>
+
+<script>
+  $('#myTabs a').click(function (e) {
+    e.preventDefault()
+    $(this).tab('show')
+  })
+</script>
