Add courses list to location and category pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -302,11 +302,11 @@ ul.users-list {
 .course-buttons {
   list-style: none;
   margin: 0;
-  float: right;
   li {
-    float: right;
+    margin: 0;
     display: inline;
-    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 1.2em;
   }
 }
 
