--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, @category.name) %>
 <h1>Courses in <%= @category.name %></h1>
 <hr />
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h2>To do: list courses here.</h2>
-  </div>
-</div>
+<ul class="courses">
+  <%= render @courses %>
+</ul>
