--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,17 +14,25 @@
 
 <div class="row" id="home-options">
   <div class="col-md-6">
-    <h1>View Course as a Guest User</h1>
-    <p>Browse and view courses as a guest</p>
+    <h1>View all courses</h1>
+    <p>Browse and view courses and coordinators</p>
     <%= link_to courses_path, class: "btn btn-success" do %>
       <i class="fa fa-book" aria-hidden="true"></i> Browse all courses
     <% end %>
   </div>
   <div class="col-md-6">
-    <h1>Sign in to your account</h1>
-    <p>Update your courses, view your courses, view coordinator information</p>
-    <%= link_to login_path, class: "btn btn-success" do %>
-      <i class="fa fa-sign-in" aria-hidden="true"></i> Log in to your account
+    <% if logged_in? %>
+      <h1>Create a new course</h1>
+      <p>Create a new course with course information.</p>
+      <%= link_to login_path, class: "btn btn-success" do %>
+        <i class="fa fa-file-text-o" aria-hidden="true"></i> Create a course
+      <% end %>
+    <% else %>
+      <h1>Sign in to your account</h1>
+      <p>Update your courses, view your courses, view coordinator information</p>
+      <%= link_to login_path, class: "btn btn-success" do %>
+        <i class="fa fa-sign-in" aria-hidden="true"></i> Log in to your account
+      <% end %>
     <% end %>
   </div>
 </div>
