--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -8,7 +8,7 @@
 
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.submit "Create a new category", class: "btn btn-primary" %>
+      <%= f.submit "Create a new category", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
