--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -8,7 +8,7 @@
 
       <%= f.text_field :location, class: 'form-control' %>
 
-      <%= f.submit "Create a new location", class: "btn btn-primary" %>
+      <%= f.submit "Create a new location", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
