Add like and dislike buttons

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,6 +48,7 @@ textarea {
   border-radius: 5px;
   padding: 3%;
   margin-bottom: 10px;
+  overflow:auto;
 }
 
 /* homepage */
@@ -318,4 +319,24 @@ ul.users-list {
   li {
     margin-bottom: 10px;
   }
+}
+
+/* Like / dislike stats */
+
+.stats {
+  font-size: 1.2em;
+  list-style: none;
+  li {
+    display: inline;
+    padding-left: 5%;
+    float: right;
+    .btn {
+      background: transparent;
+      display: inline;
+    }
+  }
+}
+
+.red {
+  background: red;
 }
