--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,6 +3,8 @@
 <hr />
 
 <div>
+  
+  <%= render 'shared/error_messages', object: current_user.likeables.build %>
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
