--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "View Profile", current_user %></li>
-              <li><%= link_to "Edit Profile", "#" %></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
