--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,31 +1,37 @@
 <li>
   <div class="row">
-    <div class="col-md-2">
-      <% @user = User.find(course.user_id) %>
-      <%= render @user %>
-    </div>
+    <% unless @hide_user %>
+      <div class="col-md-2">
+        <% @user = User.find(course.user_id) %>
+        <%= render @user %>
+      </div>
+    <% end %>
     <div class="col-md-6 course">
       <div class="grey-box">
         <h2>
           <%= link_to course.name, course %>
         </h2>
-        <p>
-          <strong>Category:</strong>
-          <%= course.categories.map { |c| link_to(c.name, c) }.join(', ').html_safe %>
-        </p>
-        <p>
-          <strong>Location: </strong>
-          <%= course.locations.map { |l| link_to(l.location, l) }.join(', ').html_safe %>
-        </p>
+        <% unless @hide_cat_loc %>
+          <p>
+            <strong>Category:</strong>
+            <%= course.categories.map { |c| link_to(c.name, c) }.join(', ').html_safe %>
+          </p>
+          <p>
+            <strong>Location: </strong>
+            <%= course.locations.map { |l| link_to(l.location, l) }.join(', ').html_safe %>
+          </p>
+        <% end %>
         <p>
           <strong>Created: </strong>
           <%= time_ago_in_words(course.created_at) %> ago.
         </p>
       </div>
     </div>
-    <div class="col-md-4">
-      <%= image_tag course.picture.url if course.picture? %>
-    </div>
+    <% unless @hide_picture %>
+      <div class="col-md-4">
+        <%= image_tag course.picture.url if course.picture? %>
+      </div>
+    <% end %>
   </div>
   <hr />
 </li>
