--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -28,6 +28,6 @@
     <%= link_to "Return to Course List", courses_path, class: "btn btn-info" %>
   </li>
   <% if @user == current_user %>
-    <li><%= link_to "Edit Course", "#", class: "btn btn-success" %></li>
+    <li><%= link_to "Edit Course", edit_course_path(@course), class: "btn btn-success" %></li>
   <% end %>
 </ul>
