Add contact form

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,67 +1,34 @@
 <footer>
+  <div class="row">
+    <div class="col-md-3">
+      <legend>Contact us</legend>
+      <%= render 'shared/contact_form' %>
+    </div>
+    
+    <div class="col-md-3">
+      <legend>General Inqueries</legend>
+      <h5><a href="http://www1.rmit.edu.au/staff/andy-song">Andy Song</a></h5>
+      <h5><a href="http://www1.rmit.edu.au/browse/About%20RMIT%2FContact%2FAll%20contacts%2FStaff%2Fby%20name%2FJ%2F;ID=3ip243lh7yv11;STATUS=A?QRY=%20(science)">Junliang Jiang</a></h5>
+      <h5><a href="http://www1.rmit.edu.au/staff/">Ali</a></h5>
+    </div>
+    
+    <div class="col-md-3">
+      <legend>Useful Links</legend>
+      <h5><a href=“http://www.rmit.edu.au/study-with-us/levels-of-study”>RMIT Course</a></h5>
+      <h5><a href="http://www1.rmit.edu.au/its/ithelp">RMIT Help Desk</a></h5>
+      <h5><a href="https://www.rmit.edu.au/study-with-us/international-students">RMIT International</a></h5>
+      
+    </div>
   
-<div class="row">
-  <div class="col-md-3">
-    <legend>Contact us</legend>
-        <form action=" " method="post"  id="contact_form">
-
-
-<!-- Text input-->
-
-<div class="form-group">
-  <div class="input-group">
-  <input  name="name" placeholder="Name" class="form-control"  type="text"  cols="50">
-  </div>
-</div>
-<div class="form-group">
-  <div class="input-group">
-
-
-  <input name="email" placeholder="E-Mail" class="form-control"  type="text"  cols="50">
-  </div>
-</div>
-<div class="form-group">
-  <div class="input-group">
-  <textarea class="form-control" name="comment" placeholder="Message" rows="4" cols="50"></textarea>
-  </div>
-</div>
-
-<div class="form-group">
-  <div class="col-md-4">
-    <button type="submit" class="btn btn-info" >Send <span class="glyphicon glyphicon-send"></span></button>
-  </div>
-</div>
-
-
-
-
-
-  </div>
+    <div class="col-md-3">
+      <legend>Media</legend>
+      <h5><a href="https://www.youtube.com/user/rmitmedia" class="hoverable"><span class="normal">Youtube</span><span class="hover"><i class="fa fa-youtube" aria-hidden="true"></i>Youtube</span></a></h5>
+      <h5><a href="https://twitter.com/RMIT" class="hoverable"><span class="normal">Twitter</span><span class="hover"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</span></a></h5>
+      <h5><a href="https://www.facebook.com/RMITuniversity/" class="hoverable"><span class="normal">Facebook</span><span class="hover"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</span></a></h5>
+      <h5><a href="https://www.instagram.com/rmituniversit" class="hoverable"><span class="normal">Instagram</span><span class="hover"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</span></a></h5>
+      <h5><a href="https://web.skype.com/" class="hoverable"><span class="normal">Skype</span><span class="hover"><i class="fa fa-skype" aria-hidden="true"></i>Skype</span></a></h5>
   
-  <div class="col-md-3">
-    <legend>General Inqueries</legend>
-    <h5><a href="http://www1.rmit.edu.au/staff/andy-song">Andy Song</a></h5>
-    <h5><a href="http://www1.rmit.edu.au/browse/About%20RMIT%2FContact%2FAll%20contacts%2FStaff%2Fby%20name%2FJ%2F;ID=3ip243lh7yv11;STATUS=A?QRY=%20(science)">Junliang Jiang</a></h5>
-    <h5><a href="http://www1.rmit.edu.au/staff/">Ali</a></h5>
-  </div>
-  
-  <div class="col-md-3">
-    <legend>Useful Links</legend>
-    <h5><a href=“http://www.rmit.edu.au/study-with-us/levels-of-study”>RMIT Course</a></h5>
-    <h5><a href="http://www1.rmit.edu.au/its/ithelp">RMIT Help Desk</a></h5>
-    <h5><a href="https://www.rmit.edu.au/study-with-us/international-students">RMIT International</a></h5>
+    </div>
     
   </div>
-
-  <div class="col-md-3">
-    <legend>Media</legend>
-    <h5><a href="https://www.youtube.com/user/rmitmedia" class="hoverable"><span class="normal">Youtube</span><span class="hover"><i class="fa fa-youtube" aria-hidden="true"></i>Youtube</span></a></h5>
-    <h5><a href="https://twitter.com/RMIT" class="hoverable"><span class="normal">Twitter</span><span class="hover"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</span></a></h5>
-    <h5><a href="https://www.facebook.com/RMITuniversity/" class="hoverable"><span class="normal">Facebook</span><span class="hover"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</span></a></h5>
-    <h5><a href="https://www.instagram.com/rmituniversit" class="hoverable"><span class="normal">Instagram</span><span class="hover"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</span></a></h5>
-    <h5><a href="https://web.skype.com/" class="hoverable"><span class="normal">Skype</span><span class="hover"><i class="fa fa-skype" aria-hidden="true"></i>Skype</span></a></h5>
-
-  </div>
-  
-</div>
 </footer>
