add padding for fotter

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -218,7 +218,7 @@ span.picture {
 
 footer {
   margin-top: 45px;
-  padding-top: 5px;
+  padding: 1% 5%;
   border-top: 1px solid $gray-medium-light;
   color: black;
   background-color: $gray-medium-light;
@@ -362,4 +362,13 @@ ul.users-list {
       color: black;
     }
   }
+}
+
+
+
+fpadding {
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
