add contact on footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,10 @@
     <div class="col-md-3">
       <legend>Contact us</legend>
       <%= render 'shared/contact_form' %>
+      
+      <h5>Tel: 012345678</h5>
+      <h5>Fax: 012312321</h5>
+      <h5>s3374213@rmit.edu.au</h5>
     </div>
     
     <div class="col-md-3">
