--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -265,9 +265,10 @@ footer {
 .checkboxes {
   label {
     font-weight: normal;
+    padding-right:1%;
   }
   input[type="checkbox"] {
-    width: 4%;
+    width: 2%;
   }
 }
 
