--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @message, url: create_message_url do |f| %>
+<%= form_for @message, url: create_message_url, class: 'contact-form' do |f| %>
   <%= notice %>
   <%= render 'shared/error_messages', object: f.object %>
 
