--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
       
       <h5>Tel: 012345678</h5>
       <h5>Fax: 012312321</h5>
-      <h5>s3374213@rmit.edu.au</h5>
+      <h5><%= mail_to "s3374213@rmit.edu.au" %></h5>
     </div>
     
     <div class="col-md-3">
