--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -29,6 +29,12 @@
           <strong>Created: </strong>
           <%= time_ago_in_words(course.created_at) %> ago.
         </p>
+        <% if admin_logged_in? %>
+          <ul class="admin-btns">
+            <li><%= link_to "Delete course", "#", class: "btn btn-danger" %></li>
+            <li><%= link_to "Reset votes", "#", class: "btn btn-warning" %></li>
+          </ul>
+        <% end %>
         <ul class="stats">
           <% if logged_in? %>
             <%= render partial: "likeables/like", locals: { course: course } %>
