--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -31,4 +31,7 @@
   <% if @user == current_user %>
     <li><%= link_to "Edit Course", edit_course_path(@course), class: "btn btn-success" %></li>
   <% end %>
+  <% if admin_logged_in? %>
+    <li><%= link_to "Delete course", "#", class: "btn btn-danger" %></li>
+  <% end %>
 </ul>
