--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,8 @@
     <%= link_to "YOURCOURSE", root_path, id: "logo", class: "btn btn-lg btn-info" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        
+        <!-- Category -->
         <li>
           <a href="#" class="dropdown-toggle btn btn-info" data-toggle="dropdown">
             <i class="fa fa-list-ol" aria-hidden="true"></i> Category <b class = "caret"></b>
@@ -21,6 +23,8 @@
             <% end %>
           </ul>
         </li>
+        
+        <!-- Location -->
         <li>
           <a href="#" class="dropdown-toggle btn btn-info" data-toggle="dropdown">
             <i class="fa fa-location-arrow" aria-hidden="true"></i> Location <b class = "caret"></b>
@@ -39,6 +43,8 @@
             <% end %>
           </ul>
         </li>
+        
+        <!-- Coordinator buttons -->
         <% if logged_in? %>
           <li>
             <%= link_to new_course_path, class: "btn btn-info" do %>
@@ -59,13 +65,29 @@
             </ul>
           </li>
         <% end %>
-        <% if !logged_in? %>
+        
+        <!-- Admin logout button -->
+        <% if admin_logged_in? %>
           <li>
-            <%= link_to login_path, class: "btn btn-info" do %>
-              <i class="fa fa-sign-in" aria-hidden="true"></i> Log in
-            <% end %>
+              <%= link_to admin_logout_path, method: "delete", class: "btn btn-info" do %>
+                <i class="fa fa-sign-out" aria-hidden="true"></i> Log out
+              <% end %>
           </li>
         <% end %>
+        
+        <!-- Login button -->
+        <% if !logged_in? && !admin_logged_in? %>
+          <li>
+            <a href="#" class="dropdown-toggle btn btn-info" data-toggle="dropdown">
+              <i class="fa fa-sign-in" aria-hidden="true"></i> Login <b class = "caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Coordinator Login", login_path %></li>
+              <li><%= link_to "Admin Login", admin_login_path %></li>
+            </ul>
+          </li>
+        <% end %>
+        
       </ul>
     </nav>
   </div>
