Fix like reset bug

--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -39,10 +39,7 @@
           <% if logged_in? %>
             <%= render partial: "likeables/like", locals: { course: course } %>
           <% else %>
-            <div id="like_course_<%= course.id %>">
-              <li><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> <%= count_likes(course) %></li>
-              <li><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> <%= count_dislikes(course) %></li>
-            </div>
+            <%= render partial: "likeables/static_like", locals: { course: course } %>
           <% end %>
         </ul>
       </div>
