--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,3 +2,12 @@
 <% provide(:button_text, "Update Profile Information") %>
 <h1>Update your profile</h1>
 <%= render 'form' %>
+<!-- Change gravatar -->
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" rel="noopener" target = "_blank">change</a>
+    </div>
+  </div>
+</div>
